Fixed spacing

--- a/style.css
+++ b/style.css
@@ -51,5 +51,5 @@ p, h1, h3 {
 .halfvhbr {
     display: block;
     content: "";
-    margin-top: 50vh;
+    margin-top: 15vh;
 }
